<resources>
    <string name="config_login_phone_number_title">PhoneNumber</string>
    <string name="config_login_phone_number_key">key_login_default_username</string>
    <string name="config_login_password_title">Password</string>
    <string name="config_login_password_key">key_login_default_password</string>
    <string name="login_page_title">Login Account</string>
    <string name="forget_page_title">Forget Password</string>
    <string name="register_page_title">Register</string>
    <string name="about_page_title">About App01</string>
    <string name="order_record_filter_page_title">訂單篩選</string>
    <string name="order_record_page_title">訂單紀錄</string>
    <string name="support_page_title">Support</string>
    <string name="question_page_title">Questions</string>
    <string name="clause_page_title">Terms</string>
    <string name="suggestion_page_title">Suggestion</string>
    <string name="myaccount_page_title">Account</string>
    <string name="change_password_page_title">修改密碼</string>
    <string name="commmet_page_title">獲得評語</string>
    <string name="recommend_page_title">我推薦的好友</string>
    <string name="prize_record_page_title">Points Record</string>
    <string name="photo_verify_page_title">上傳證件</string>
    <string name="driver_account_page_title">編輯司機資料</string>
    <string name="order_filter_page_title">訂單篩選</string>
    <string name="order_call_taxi_page_title">Call Driver</string>
    <string name="begin_order_page_title">Start Order</string>
    <string name="wait_order_page_title">待跑訂單</string>
    <string name="order_process_page_title">Order process</string>
    <string name="merchandise_page_title">貨單資訊</string>
    <string name="passenger_page_title">乘車資訊</string>
    <string name="verify_code_title">驗證碼</string>
    <string name="bouns_record_title">Points Record</string>
    <string name="client_take_ride_title">一般搭乘</string>
    <string name="client_send_merchandise_title">貨物快送</string>
    <string name="client_book_marks_title">常用地點</string>
    <string name="client_take_ride_search_title">通知司機中</string>
    <string name="client_order_car_wait_title">司機趕路中</string>
    <string name="client_order_car_sms_title">簡訊通知</string>
    <string name="client_train_pick_up">車站接送</string>
    <string name="client_airplane_pick_up">機場接送</string>
    <string name="client_merchandise_insurance_title">保險說明</string>
    <string name="client_merchandise_restrict_title">貨物限制</string>
    <string name="client_merchanse_send_title">貨物快送</string>
    <string name="driver_price_report_title">司機報價中</string>
    <string name="driver_price_report_check_title">司機資訊</string>
    <string name="driver_comment_title">司機評分</string>
    <string name="client_comment_title">客戶評分</string>
    <string name="driver_report">檢舉司機</string>
    <string name="app_report">APP comments</string>
    <string name="merchandise_calculator">才數計算機</string>
    <string name="map_location">選擇地點</string>
    <string name="query_driver_map_location">司機位置</string>
    <string name="map_location_navigation">導航到地點</string>
    <string name="driver_online_check">線上簽收</string>
    <string name="driver_report_price">等待審核</string>
    <string name="camera_title">拍攝相片</string>
    <string name="driver_idenity_page_title">選擇身份</string>
    <string name="driver_login_page_title">司機登入</string>
    <string name="app_name">App01_client</string>
    <string name="app_database_name">App01.realm</string>
    <string name="portal_login">Log In</string>
    <string name="portal_clean">Sign Out</string>
    <string name="login_id_title">*Phone Number</string>
    <string name="login_password_title">*Password</string>
    <string name="hint_default_portal_id">phone number</string>
    <string name="hint_default_portal_password">Password</string>
    <string name="hint_test_portal_id">odaru@geovision.com.tw</string>
    <string name="hint_test_portal_password">odaru123</string>
    <string name="forget_password"><u>Forget Password</u></string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="login_error_title">登入失敗</string>
    <string name="map_error_title">查詢失敗</string>
    <string name="login_error_msg">抱歉！\n您輸入的手機號碼或密碼有誤。</string>
    <string name="login_error_user_msg">請先註冊</string>
    <string name="login_error_register_msg">請輸入正確資料</string>
    <string name="map_error_query_msg">請輸入正確地址資料</string>
    <string name="login_error_gps">Location Service Disabled</string>
    <string name="login_error_gps_msg">Please enable location servies</string>
    <string name="txt_info">Get new password by message</string>
    <string name="resend_button">Re-Send Password</string>
    <string name="txt_id">*身分證</string>
    <string name="txt_name_data">*Name</string>
    <string name="txt_id_data">*Identification</string>
    <string name="txt_phone_data">*phone number</string>
    <string name="txt_password_data">*Login Password</string>
    <string name="txt_password_confirm">*Confirm Password</string>
    <string name="txt_recommdator_code">Referrer Id</string>
    <string name="hint_account_name">odaru@geovision.com.tw</string>
    <string name="hint_account_id">odaru123</string>
    <string name="send_valid_code_button">Request Verify Code</string>
    <string name="check_aggree">I agree</string>
    <string name="check_aggree_info">privacy and rule</string>
    <string name="txt_choice_identify">*Please select driver type</string>
    <string name="check_client">Customer</string>
    <string name="check_driver">Driver</string>
    <string name="register_error_title">Register fail</string>
    <string name="finish_register_title">Verified driver qualifications</string>
    <string name="finish_register">審核通過後將開啟接單功能\n請等候簡訊</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="begin_order">Order</string>
    <string name="order_filer">Filter</string>
    <string name="wait_list">Waited Order</string>
    <string name="past_order">Past Order</string>
    <string name="order">Order</string>
    <string name="order_record">Order History</string>
    <string name="support">Support</string>
    <string name="notification">News</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="account">Account</string>
    <string name="wallet">Wallet</string>
    <string name="bouns">Bonus</string>
    <string name="driver">Became Driver</string>
    <string name="logOut">Log Out</string>
    <string name="service_info">What kinds of service do you want?</string>
    <string name="service_take">get a ride</string>
    <string name="service_send_merchandise">delivery merchandise</string>
    <string name="service_pick_up_train">pick up from train station</string>
    <string name="service_pick_up_airplane">pick up from airport</string>
    <string name="service_taxi">Taxi</string>
    <string name="service_uber">UDer</string>
    <string name="service_truck">Truck</string>
    <string name="service_big_truck">Cargo</string>
    <string name="service_big_trailer">Trailer</string>
    <string name="txt_answer">請留下寶貴的建議</string>
    <string name="txt_name">聯絡人名稱</string>
    <string name="txt_phone">電話/電郵</string>
    <string name="txt_suggestion">意見</string>
    <string name="btn_send">送出</string>
    <string name="btn_logout">登出</string>
    <string name="menu_send_share_txt_comment">分享您使用的心得</string>
    <string name="menu_send_share_comment">分享APP評分可獲得500點積分</string>
    <string name="menu_send_share_comment_tip">若您覺得APP好用\n請給小費鼓勵</string>
    <string name="dialog_cancel_report">取消報價</string>
    <string name="dialog_cancel_report_msg">客戶還在考慮中\n確定放棄這次報價機會嗎？</string>
    <string name="dialog_btn_cancel_report">取消報價</string>
    <string name="dialog_btn_give_up_report">放棄報價</string>
    <string name="txt_change_account">Change Password</string>
    <string name="txt_obtain_comment">Comments</string>
    <string name="txt_recommend_friend">Referred Friends</string>
    <string name="txt_apply_driver">Be Driver</string>
    <string name="txt_driver_identity">Pick Driver Identification</string>
    <string name="txt_name_show">Name</string>
    <string name="txt_id_show">Identification</string>
    <string name="txt_phone_show">Phone Number</string>
    <string name="txt_courrent_passwod">．Old Password</string>
    <string name="txt_new_passwod">．New Password</string>
    <string name="txt_passwod_confirm">．Confirm Password</string>
    <string name="txt_obtain_prize">已為您賺取500積分</string>
    <string name="txt_next_title">離下一次升級的時間:</string>
    <string name="txt_now_upgrade">現在可以升級</string>
    <string name="txt_next_time">01小時58分32秒</string>
    <string name="btn_upgrade">Upgrade</string>
    <string name="btn_next">History</string>
    <string name="default_title">車神</string>
    <string name="default_info">可以領取以下獎勵</string>
    <string name="txt_prize_info">獲取積分200點</string>
    <string name="txt_upgrade">升</string>
    <string name="pick_identity_title">選擇註冊身份</string>
    <string name="pick_identity_info">每個手機只能註冊一種身份</string>
    <string name="taxi_driver">Taxi</string>
    <string name="Uber_driver">UBER</string>
    <string name="truck_driver">Truck</string>
    <string name="cargo_driver">Cargo</string>
    <string name="trailer_driver">Trail</string>
    <string name="no_work">暫時不營業</string>
    <string name="car_title">車籍資料</string>
    <string name="car_brand_name">廠牌名稱</string>
    <string name="car_cc_number">車種CC數</string>
    <string name="car_release_year">車種出廠年份</string>
    <string name="car_type_number">車種號碼</string>
    <string name="car_work_licence">營業證號</string>
    <string name="btn_finish">完成</string>
    <string name="photo_verify">線上驗證</string>
    <string name="photo_licence_type">1.車輛行照</string>
    <string name="photo_id">2.身分證</string>
    <string name="photo_drive_licence">3.駕照</string>
    <string name="photo_business＿license">4.營業執照</string>
    <string name="photo_car_full">5.車身連車牌照片</string>
    <string name="photo_skip">略過</string>
    <string name="photo_finish">完成</string>
    <string name="pick_picture_camera">take camera</string>
    <string name="pick_picture_gallery">picture gallery</string>
    <string name="driver_account_title_level">車神</string>
    <string name="driver_current_order_number">目前接單數</string>
    <string name="driver_cancel_order_number">2.身分證</string>
    <string name="order_finish_percent">訂單完成率</string>
    <string name="driver_total_score">累積總績分</string>
    <string name="order_cancel_count">訂單取消數</string>
    <string name="driver_name">姓名</string>
    <string name="driver_car_brand">車牌</string>
    <string name="driver_car_type">車型</string>
    <string name="driver_service_spec">服務特色</string>
    <string name="driver_information">介紹與備註</string>
    <string name="driver_information_content">台灣大車隊，安全，舒適，以客為尊。給予客戶最乾淨的乘車環境，絕無煙味。適時地詢問客戶是否有常走的路線，絕無繞路之疑。</string>
    <string name="driver_car_photo">愛車照片</string>
    <string name="driver_account_save">儲存</string>
    <string name="driver_service_a">可預約</string>
    <string name="driver_service_b">包車</string>
    <string name="driver_service_c">機場接送</string>
    <string name="driver_service_d">五年新車</string>
    <string name="driver_service_e">無菸車</string>
    <string name="driver_service_f">可刷卡</string>
    <string name="driver_service_g">貨物接送</string>
    <string name="driver_service_h">WI-FI</string>
    <string name="client_agree_price">同意司機報價</string>
    <string name="merchandise_requirement">特殊需求 : </string>
    <string name="dialog_get_on_car_comfirm">確認</string>
    <string name="cancel_take_spec">取消</string>
    <string name="unit_hit_length">請輸入物體長度(cm)</string>
    <string name="unit_hit_width">請輸入物體寬度(cm)</string>
    <string name="unit_hit_high">請輸入物體高度(cm)</string>
    <string name="g_ok">OK</string>
    <string name="g_cancel">Cancel</string>
</resources>