<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myview="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	<!--  
    <tw.com.geovision.gveye.myview.prefixededittext.PrefixedEditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="admin"
        android:ems="15"
        myview:prefixedText="@string/device_info_user_account" 
        android:layout_margin="7dp"/>
    <tw.com.geovision.gveye.myview.prefixededittext.PrefixedEditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="admin"
        myview:prefixedText="@string/device_info_user_password" 
        android:ems="15"
        android:inputType="textPassword"
        android:layout_margin="7dp"/>
    -->
     <!--  -->

    <LinearLayout
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_toRightOf="@+id/name"
        >
    <EditText android:id="@+id/merchandise_content_width"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:inputType="numberDecimal"
        android:hint="@string/unit_hit_length"
        android:gravity="center_vertical"
        />
    <EditText android:id="@+id/merchandise_content_length"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:layout_gravity="center_horizontal"
        android:hint="@string/unit_hit_width"
        android:gravity="center_vertical"
        />
    <EditText android:id="@+id/merchandise_content_high"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:layout_gravity="center_horizontal"
        android:hint="@string/unit_hit_high"
        android:gravity="center_vertical"
        />
        </LinearLayout>
    <View
        android:id="@+id/titlebuttonDivider"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/filter_pop_list_divider_color" />
    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sure_action"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/filter_pop_list_button_txt_color"
            android:text="@string/dialog_get_on_car_comfirm"/>
        <View
            android:id="@+id/border"
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@color/filter_pop_list_divider_color" />

        <Button
            android:id="@+id/cancel_action"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:textColor="@color/filter_pop_list_button_txt_color"
            android:text="@string/cancel_take_spec"/>
    </LinearLayout>

</LinearLayout>